[package]
name = "ilena_analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
hound = "3.4.0"
symphonia = { version = "0.5", features = ["mp3"] }
rustfft = "6.1.0"
egui = { version = "0.29.1" }
eframe = { version = "0.29.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
#    "wgpu",
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui_plot = "0.29.0"
# inlucde serde with macros
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"